# use_surreal

./: .env  .gitignore  Cargo.toml  README.md  connect-sql.sh  docker-compose.yml  surrealdb-with-docker.sh
src/: database.rs  error.rs  github.rs  instagram.rs  main.rs
